--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,42 @@
             </div>
         </div>
 
+        {% if error_message %}
+            <button type="button" class="btn btn-primary" id="triggerModalButton" data-bs-toggle="modal" data-bs-target="#myModal" style="display: none;">
+                Open Modal
+            </button>
+            
+            <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header bg-danger text-white">
+                            <h5 class="modal-title" id="exampleModalLabel">
+                                <i class="bi bi-exclamation-triangle-fill"></i> Something Went Wrong!
+                            </h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>{{ error_message }}</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        
+            <script>
+                window.onload = function() {
+                    var errorMessage = "{{ error_message }}";
+
+                    if (errorMessage) {
+                        var modalTriggerButton = document.getElementById('triggerModalButton');
+                        modalTriggerButton.click();
+                    }
+                };
+            </script>
+        {% endif %}    
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
