--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,10 +1,9 @@
-
 :root {
-    --background-color: #1F2940;
-    --primary-color: #141B2D;
-    --secondary-color: #292f66;
-    --text-color: white;
-    --dark-text-color: rgb(211, 211, 211);
+    --background-color: #ffffff;
+    --primary-color: #00b5ac;
+    --secondary-color: #78f7f0;
+    --text-color: rgb(37, 37, 37);
+    --dark-text-color: rgb(99, 99, 99);
     --link-text-color: rgb(0, 119, 255);
 }
 
