Redesign the dashboard Removed add user

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,336 +1,9 @@
 :root {
-    --background-color: #ffffff;
+    --background-color: #eeeeee;
     --primary-color: #00b5ac;
-    --secondary-color: #78f7f0;
+    --secondary-color: #007e77;
     --text-color: rgb(37, 37, 37);
+    --text-color-2: #00524e;
     --dark-text-color: rgb(99, 99, 99);
     --link-text-color: rgb(0, 119, 255);
-}
-
-/*
-:root {
-    --background-color: #F7E3DA;
-    --primary-color: #FDB7B9;
-    --secondary-color: #BADFD7;
-    --text-color: black;
-    --dark-text-color: rgb(51, 51, 51);
-    --link-text-color: rgb(0, 140, 255);
-}
-*/
-/*
-:root {
-    --background-color: #1ECBE1;
-    --primary-color: #1e89e1;
-    --secondary-color: #69e3f3;
-    --text-color: white;
-    --dark-text-color: rgb(211, 211, 211);
-    --link-text-color: rgb(0, 140, 255);
-}
-    */
-
-
-/* index.html */
-
-.index-page {
-    background-color: var(--background-color) !important;
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.centered-square {
-    width: 1000px;
-    height: 400px;
-    display: flex;
-    background-color: var(--primary-color);
-    border-radius: 20px;
-}
-
-.left-side {
-    flex: 1;
-    display: flex;
-    justify-content: left;
-    align-items: top;
-    padding: 20px;
-    background-color: var(--primary-color);
-    color: black;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-}
-
-.left-inner-content {
-    margin: 70px 80px;
-    color: var(--text-color);
-}
-
-.right-side {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.login-form {
-    width: 100%;
-    max-width: 300px;
-    display: flex;
-    flex-direction: column;
-    margin: 0px;
-}
-
-.login-form input[type="text"],
-.login-form input[type="password"] {
-    margin-bottom: 15px;
-    border-color: var(--primary-color);
-    background-color: var(--background-color);
-    color: var(--text-color);
-    border-radius: 8px;
-    padding: 10px;
-}
-
-.login-form input[type="text"]::placeholder,
-.login-form input[type="password"]::placeholder {
-    color: var(--dark-text-color);
-}
-
-.login-form input[type="submit"] {
-    border-radius: 25px;
-    background-color: var(--background-color);
-    border: 1px solid var(--background-color);
-    color: var(--text-color);
-    padding: 10px 20px;
-    text-align: center;
-    font-size: 16px;
-    cursor: pointer;
-    align-self: flex-end;
-    display: block;
-}
-
-.sign-up {
-    color: var(--link-text-color);
-    text-decoration: none;
-    font-size: 14px;
-    display: block;
-    margin-top: 0px;
-}
-
-.sign-up:hover {
-    text-decoration: underline;
-}
-
-.row {
-    align-items: center;
-}
-
-.col {
-    text-align: right;
-}
-
-.align-bottom {
-    margin-top: 10px;
-}
-
-.forgot-password {
-    color: var(--link-text-color);
-    text-decoration: none;
-    font-size: 14px;
-    display: block;
-    margin-top: 0px;
-}
-
-.forgot-password:hover {
-    text-decoration: underline;
-}
-
-/* dashboard.html */
-
-.wrapper {
-    background-color: var(--background-color);
-    display: flex;
-    min-height: 100vh;
-    position: relative;
-}
-
-#sidebar {
-    position: fixed;
-    min-width: 250px;
-    max-width: 250px;
-    min-height: 100vh;
-    background-color: var(--primary-color);
-    color: var(--text-color);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.hover-btn {
-    background-color: transparent;
-    color: var(--dark-text-color);
-    border: 2px solid transparent;
-    padding: 10px 20px;
-    font-size: 20px;
-    transition: background-color 0.3s, color 0.3s;
-    border-radius: 12px;
-    cursor: pointer;
-    width: 200px;
-    height: 60px;
-    margin-bottom: 20px;
-}
-
-.hover-btn:hover {
-    background-color: var(--secondary-color); 
-    color: var(--text-color);
-}
-
-.hover-btn.active {
-    background-color: var(--secondary-color); 
-    color: var(--text-color);
-}
-
-#content {
-    margin-left: 250px;
-    color: var(--text-color);
-    flex-grow: 1;
-    padding: 70px;
-    padding-top: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#top-col-row {
-    width: 100%;
-    margin-left: -15px;
-    margin-right: -15px;
-}
-
-.welcome-container {
-    display: flex;
-    align-items: flex-start;
-    padding: 0 15px;
-    padding: 0 15px;
-}
-
-.setting-container {
-    align-items: flex-start;
-    padding: 0 15px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.top-box {
-    background-color: var(--secondary-color);
-    color: var(--text-color);
-    padding: 20px;
-    margin-top: 40px;
-    margin-bottom: 80px;
-    border-radius: 10px;
-    height: 700px;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.grid-container {
-    width: 90%;
-}
-
-.content-box {
-    background-color: var(--secondary-color);
-    padding: 20px;
-    border-radius: 10px;
-    height: 300px;
-    width: 100%;
-    margin: 10px 0;
-}
-
-/* front_page.html */
-html, body {
-    height: 100%;
-    margin: 0;
-}
-
-.front-page-wrapper {
-    display: flex;
-    flex-direction: column;
-    height: 100vh; /* Full viewport height */
-}
-
-.carousel {
-    flex: 0 0 auto; /* Carousel keeps its height */
-}
-
-.carousel-img {
-    height: 60vh;
-    object-fit: cover;
-    object-position: 50% 70%;
-    opacity: 80%;
-}
-
-.front-page-content {
-    flex: 1 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: linear-gradient(#097693, #00ACA9);
-}
-
-.front-page-buttons {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-}
-
-.front-page-welcome {
-    color: white;
-    font-family: 'Bebas Neue', sans-serif !important;
-    font-size: 50px;
-    width: 700px;
-    margin-top: 60px;
-    text-align: center;
-}
-
-.front-page-buttons .btn-login {
-    width: 120px;
-    height: 40px;
-    background-color: transparent;
-    color: rgb(212, 212, 212);
-    border: 1px solid rgb(212, 212, 212);
-    border-radius: 5px;
-    padding: 0px;
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 10px;
-}
-
-.front-page-buttons .btn-register {
-    width: 120px;
-    height: 40px;
-    background-color: rgb(212, 212, 212);
-    color: #097693;
-    border: 1px solid rgb(212, 212, 212);
-    border-radius: 5px;
-    padding: 0px;
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 10px;
-}
-
-.front-page-buttons .btn-login:hover {
-    background-color: rgb(212, 212, 212);
-    border-color: rgb(212, 212, 212);
-    color: #097693;
-}
-
-.front-page-buttons .btn-register:hover {
-    background-color: transparent;
-    border-color: rgb(212, 212, 212);
-    color: rgb(212, 212, 212);
 }
