--- a/templates/application.html
+++ b/templates/application.html
@@ -123,24 +123,24 @@
         <div class="container">
             <div class="application-box">
                 <h2 class="text-center">Hostel Application Form</h2>
-                <form class="row g-3">
+                <form class="row g-3" method="POST">
                     <!-- Portrait Upload -->
                     <div class="col-md-12 text-center portrait-upload">
                         <img id="portraitPreview" src="/static/img/profile_picture_placeholder.jfif" alt="Portrait Preview">
                         <label for="portrait" class="form-label">Submit Picture</label>
-                        <input type="file" class="form-control d-inline-block custom-file-input" id="portrait" accept="image/*" onchange="previewImage(event)">
+                        <input type="file" class="form-control d-inline-block custom-file-input" id="portrait" name="portrait" accept="image/*" onchange="previewImage(event)">
                     </div>
 
                     <!-- Full Name -->
                     <div class="col-md-12">
                         <label for="fullName" class="form-label">Full Name</label>
-                        <input type="text" class="form-control" id="fullName" placeholder="" required>
+                        <input type="text" class="form-control" id="fullName" name="fullName" placeholder="" required>
                     </div>
 
                     <!-- Gender -->
                     <div class="col-md-6">
                         <label for="gender" class="form-label">Gender</label>
-                        <select class="form-select" id="gender" required>
+                        <select class="form-select" id="gender" name="gender" required>
                             <option selected disabled value="">Choose...</option>
                             <option value="male">Male</option>
                             <option value="female">Female</option>
@@ -150,19 +150,19 @@
                     <!-- Student ID -->
                     <div class="col-md-6">
                         <label for="studentId" class="form-label">Student ID</label>
-                        <input type="text" class="form-control" id="studentId" placeholder="" required>
+                        <input type="text" class="form-control" id="studentId" name="studentId" placeholder="" required>
                     </div>
 
                     <!-- Student IC -->
                     <div class="col-md-6">
                         <label for="studentIc" class="form-label">Student IC</label>
-                        <input type="text" class="form-control" id="studentIc" placeholder="" required>
+                        <input type="text" class="form-control" id="studentIc" name="studentIc" placeholder="" required>
                     </div>
 
                     <!-- Date of Birth -->
                     <div class="col-md-6">
                         <label for="dob" class="form-label">Date of Birth</label>
-                        <input type="date" class="form-control" id="dob" required>
+                        <input type="date" class="form-control" id="dob" name="dob" required>
                     </div>
 
                     <!-- Contact Information -->
@@ -171,19 +171,19 @@
                     <!-- Phone Number (Self) -->
                     <div class="col-md-6">
                         <label for="phoneSelf" class="form-label">Phone No.</label>
-                        <input type="tel" class="form-control" id="phoneSelf" placeholder="" required>
+                        <input type="tel" class="form-control" id="phoneSelf" name="phoneSelf" placeholder="" required>
                     </div>
 
                     <!-- Phone Number (Guardian) -->
                     <div class="col-md-6">
                         <label for="phoneGuardian" class="form-label">Phone No. (Guardian)</label>
-                        <input type="tel" class="form-control" id="phoneGuardian" placeholder="" required>
+                        <input type="tel" class="form-control" id="phoneGuardian" name="phoneGuardian" placeholder="" required>
                     </div>
 
                     <!-- Email -->
                     <div class="col-md-6">
                         <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="" required>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="" required>
                     </div>
 
                     <!-- Address Information -->
@@ -192,37 +192,37 @@
                     <!-- Address Line 1 -->
                     <div class="col-md-6">
                         <label for="addressLine1" class="form-label">Address Line 1</label>
-                        <input type="text" class="form-control" id="addressLine1" placeholder="House number, street name" required>
+                        <input type="text" class="form-control" id="addressLine1" name="addressLine1" placeholder="House number, street name" required>
                     </div>
 
                     <!-- Address Line 2 -->
                     <div class="col-md-6">
                         <label for="addressLine2" class="form-label">Address Line 2</label>
-                        <input type="text" class="form-control" id="addressLine2" placeholder="Apartment, suite, unit, etc." optional>
+                        <input type="text" class="form-control" id="addressLine2" name="addressLine2" placeholder="Apartment, suite, unit, etc." optional>
                     </div>
 
                     <!-- Area -->
                     <div class="col-md-4">
                         <label for="area" class="form-label">Area</label>
-                        <input type="text" class="form-control" id="area" placeholder="Enter area" required>
+                        <input type="text" class="form-control" id="area" name="area" placeholder="Enter area" required>
                     </div>
 
                     <!-- City -->
                     <div class="col-md-4">
                         <label for="city" class="form-label">City</label>
-                        <input type="text" class="form-control" id="city" placeholder="Enter city" required>
+                        <input type="text" class="form-control" id="city" name="city" placeholder="Enter city" required>
                     </div>
 
                     <!-- State -->
                     <div class="col-md-4">
                         <label for="state" class="form-label">State</label>
-                        <input type="text" class="form-control" id="state" placeholder="Enter state" required>
+                        <input type="text" class="form-control" id="state" name="state" placeholder="Enter state" required>
                     </div>
 
                     <!-- Zip Code -->
                     <div class="col-md-4">
                         <label for="zip" class="form-label">Zip Code</label>
-                        <input type="text" class="form-control" id="zip" placeholder="Enter zip code" required>
+                        <input type="text" class="form-control" id="zip" name="zip" placeholder="Enter zip code" required>
                     </div>
 
                     <!-- Medical Condition / Allergies -->
@@ -231,19 +231,19 @@
                     <!-- Medical Condition 1 -->
                     <div class="col-md-6">
                         <label for="medicalCondition1" class="form-label">Medical Condition / Allergy 1</label>
-                        <input type="text" class="form-control" id="medicalCondition1" placeholder="" required>
+                        <input type="text" class="form-control" id="medicalCondition1" name="medicalCondition1" placeholder="" required>
                     </div>
 
                     <!-- Medical Condition 2 -->
                     <div class="col-md-6">
                         <label for="medicalCondition2" class="form-label">Medical Condition / Allergy 2</label>
-                        <input type="text" class="form-control" id="medicalCondition2" placeholder="" optional>
+                        <input type="text" class="form-control" id="medicalCondition2" name="medicalCondition2" placeholder="" optional>
                     </div>
 
                     <!-- Medical Condition 3 -->
                     <div class="col-md-6">
                         <label for="medicalCondition3" class="form-label">Medical Condition / Allergy 3</label>
-                        <input type="text" class="form-control" id="medicalCondition3" placeholder="" optional>
+                        <input type="text" class="form-control" id="medicalCondition3" name="medicalCondition3" placeholder="" optional>
                     </div>
 
                     <!-- Submit Button -->
